# app_ajuda_agente

./: README.md  conftest.py  create_superuser.py  db.sqlite3  pyproject.toml
core/: admin.py  settings.py  urls.py
escola/: admin.py  aluno_form.py  apps.py  reports.py  signals,.py  signals.py
escola/forms/: agendamento_form.py  aluno_form.py  relatorio_form.py
escola/management/commands/: sync_professional_groups.py
escola/migrations/: 0001_initial.py  0002_alter_conteudo_descritor.py  0003_alter_agendamento_options.py  0004_rename_turma_aluno_turno.py  0005_aluno_is_active.py
escola/models/: agendamento.py  aluno.py  conteudo.py  professor.py
escola/routers/: aluno_urls.py  relatorio_urls.py
escola/static/js/: relatorio_conteudos.js
escola/templates/: base.html
escola/templates/agendamentos/: agendamento_confirm_delete.html  agendamento_detail.html  agendamento_form.html  agendamento_list.html
escola/templates/alunos/: alunos_list.html
escola/templates/home/: home_coordenacao.html  home_professor.html
escola/templates/login/: login.html
escola/templates/relatorio/: relatorio_conteudos.html
escola/tests/: test_agendamento_conflict.py  test_conteudo_crud.py  test_views_permissions.py
escola/views/: ajax.py  aluno_view.py  home_view.py  relatorio_view.py
