[tool.poetry]
name = "app-ajuda-agente"
version = "0.1.0"
description = ""
authors = ["Rafael <rafaellevi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
taskipy = "^1.14.1"
pytest = "^8.4.2"
pytest-django = "^4.11.1"
dj-database-url = "^3.0.1"
whitenoise = "^6.11.0"
psycopg2-binary = "^2.9.11"
gunicorn = "^23.0.0"
xlsxwriter = "^3.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
init_db = "python manage.py makemigrations && python manage.py migrate"
criar_admin = "python manage.py createsuperuser"
run = "python manage.py runserver"